Melhorando a classe Principal.Java